# work-rotator-app

./: CLAUDE.md  LICENSE  package.json
.github/workflows/: release.yml  update-homebrew.yml
homebrew/: rotator.rb
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: floating_panel.rs  lib.rs  main.rs
